add feed user and feed admin